--- a/src/index.css
+++ b/src/index.css
@@ -1,30 +1,29 @@
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap");
 
-*{
-  font-family: 'Josefin Sans', sans-serif;
+* {
+  font-family: "Josefin Sans", sans-serif;
 }
 body {
   margin: 0;
-  font-family: 'Josefin Sans', sans-serif;
+  font-family: "Josefin Sans", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
-::-webkit-scrollbar{
-  width:0.7rem
+::-webkit-scrollbar {
+  width: 0.7rem;
 }
 
-::-webkit-scrollbar-track{
+::-webkit-scrollbar-track {
   background-color: white;
-  
 }
 
-::-webkit-scrollbar-thumb{
-  background: rgb(236, 43, 181);
+::-webkit-scrollbar-thumb {
+  background: #f7c9c9;
   border: 3px solid transparent;
   background-clip: content-box;
   border-radius: 15px;
